--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,7 +35,7 @@
         </ul>
         <ul class="main-nav__list user-list">
           <li class="user-list__item user-list__item--search">
-            <a class="user-list__item-link" href="search.html">
+            <a class="user-list__item-link" href="search.html" aria-label="Поиск по сайту">
               <svg class="user-list__icon-search" width="18" height="18">
                 <use xlink:href="img/svg/sprite.svg#icon-search"></use>
               </svg>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="card__container-price">
                   <p class="card__price">1 200 руб.</p>
-                  <button class="card__button" type="button">
+                  <button class="card__button js-modal-button" type="button">
                     <svg class="card__button-icon" width="21" height="18">
                       <use xlink:href="img/svg/sprite.svg#icon-cart"></use>
                     </svg>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="card__container-price">
                   <p class="card__price">690 руб.</p>
-                  <button class="card__button" type="button">
+                  <button class="card__button js-modal-button" type="button">
                     <svg class="card__button-icon" width="21" height="18">
                       <use xlink:href="img/svg/sprite.svg#icon-cart"></use>
                     </svg>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="card__container-price">
                   <p class="card__price">1 500 руб.</p>
-                  <button class="card__button" type="button">
+                  <button class="card__button js-modal-button" type="button">
                     <svg class="card__button-icon" width="21" height="18">
                       <use xlink:href="img/svg/sprite.svg#icon-cart"></use>
                     </svg>
@@ -248,21 +248,88 @@
         </div>
       </div>
     </footer>
+
+    <section class="modal-overlay ">
+      <div class="modal-cart ">
+        <div class="modal-cart__inner">
+          <h2 class="modal-cart__title">Добавить<br> в корзину</h2>
+          <p class="modal-cart__text">Выберите размер:</p>
+          <form action="https://echo.htmlacademy.ru" method="post" class="form-size">
+            <ul class="form-size__inner">
+              <li class="checkbox-cart form-size__checkbox">
+                <input class="visually-hidden checkbox-cart__control" type="checkbox" name="small" id="small-field" value="small-size" checked>
+                <label class="checkbox-cart__label checkbox-cart__label--size" for="small-field">s</label>
+              </li>
+              <li class="checkbox-cart form-size__checkbox">
+                <input class="visually-hidden checkbox-cart__control" type="checkbox" name="medium" id="medium-field" value="medium-size">
+                <label class="checkbox-cart__label checkbox-cart__label--size" for="medium-field">m</label>
+              </li>
+              <li class="checkbox-cart form-size__checkbox">
+                <input class="visually-hidden checkbox-cart__control" type="checkbox" name="large" id="large-field" value="large-size">
+                <label class="checkbox-cart__label checkbox-cart__label--size" for="large-field">l</label>
+              </li>
+            </ul>
+            <button class="button modal-cart__button" type="submit">Добавить</button>
+          </form>
+        </div>
+      </div>
+    </section>
+
     <script>
-      var navMain = document.querySelector('.main-nav');
-      var navToggle = document.querySelector('.main-nav__toggle');
+      var navMain = document.querySelector(".main-nav");
+      var navToggle = document.querySelector(".main-nav__toggle");
 
-      navMain.classList.remove('main-nav--nojs');
+      navMain.classList.remove("main-nav--nojs");
 
-      navToggle.addEventListener('click', function() {
-        if (navMain.classList.contains('main-nav--closed')) {
-          navMain.classList.remove('main-nav--closed');
-          navMain.classList.add('main-nav--opened');
+      navToggle.addEventListener("click", function() {
+        if (navMain.classList.contains("main-nav--closed")) {
+          navMain.classList.remove("main-nav--closed");
+          navMain.classList.add("main-nav--opened");
         } else {
-          navMain.classList.add('main-nav--closed');
-          navMain.classList.remove('main-nav--opened');
+          navMain.classList.add("main-nav--closed");
+          navMain.classList.remove("main-nav--opened");
         }
       });
+    </script>
+
+    <script>
+      if (document.querySelector(".modal-overlay")) {
+        var modalOverlay = document.querySelector(".modal-overlay"),
+        modalCart = modalOverlay.querySelector(".modal-cart"),
+        modalButtons = document.querySelectorAll(".js-modal-button");
+        modalButtonArray = Array.prototype.slice.call(modalButtons);
+        var modalField = modalCart.querySelector(".checkbox-cart__label");
+
+        modalButtonArray.forEach(function (el) {
+          el.addEventListener("click", function (e) {
+            e.preventDefault();
+            modalOverlay.classList.remove("visually-hidden");
+            modalOverlay.classList.add("modal-overlay--open");
+            modalCart.classList.add("modal-cart--open");
+            modalField.focus();
+            document.body.style.overflow = "hidden";
+
+
+            if (modalCart.classList.contains("modal-cart--open")) {
+              window.addEventListener("click", function (e) {
+                if (e.target === modalOverlay) {
+                  document.body.style.overflow = "visible";
+                  modalOverlay.classList.remove("modal-overlay--open");
+                  modalCart.classList.remove("modal-cart--open");
+                  }
+                });
+              window.addEventListener("keydown", function (evt) {
+                if (evt.keyCode === 27) {
+                  document.body.style.overflow = "visible";
+                  modalOverlay.classList.remove("modal-overlay--open");
+                  modalCart.classList.remove("modal-cart--open");
+                }
+              });
+
+            }
+          });
+        });
+      }
     </script>
   </body>
 </html>
