--- a/source/catalog.html
+++ b/source/catalog.html
@@ -248,7 +248,6 @@
         </div>
       </div>
     </footer>
-
     <section class="modal-overlay ">
       <div class="modal-cart ">
         <div class="modal-cart__inner">
@@ -274,62 +273,7 @@
         </div>
       </div>
     </section>
-
-    <script>
-      var navMain = document.querySelector(".main-nav");
-      var navToggle = document.querySelector(".main-nav__toggle");
-
-      navMain.classList.remove("main-nav--nojs");
-
-      navToggle.addEventListener("click", function() {
-        if (navMain.classList.contains("main-nav--closed")) {
-          navMain.classList.remove("main-nav--closed");
-          navMain.classList.add("main-nav--opened");
-        } else {
-          navMain.classList.add("main-nav--closed");
-          navMain.classList.remove("main-nav--opened");
-        }
-      });
-    </script>
-
-    <script>
-      if (document.querySelector(".modal-overlay")) {
-        var modalOverlay = document.querySelector(".modal-overlay"),
-        modalCart = modalOverlay.querySelector(".modal-cart"),
-        modalButtons = document.querySelectorAll(".js-modal-button");
-        modalButtonArray = Array.prototype.slice.call(modalButtons);
-        var modalField = modalCart.querySelector(".checkbox-cart__label");
-
-        modalButtonArray.forEach(function (el) {
-          el.addEventListener("click", function (e) {
-            e.preventDefault();
-            modalOverlay.classList.remove("visually-hidden");
-            modalOverlay.classList.add("modal-overlay--open");
-            modalCart.classList.add("modal-cart--open");
-            modalField.focus();
-            document.body.style.overflow = "hidden";
-
-
-            if (modalCart.classList.contains("modal-cart--open")) {
-              window.addEventListener("click", function (e) {
-                if (e.target === modalOverlay) {
-                  document.body.style.overflow = "visible";
-                  modalOverlay.classList.remove("modal-overlay--open");
-                  modalCart.classList.remove("modal-cart--open");
-                  }
-                });
-              window.addEventListener("keydown", function (evt) {
-                if (evt.keyCode === 27) {
-                  document.body.style.overflow = "visible";
-                  modalOverlay.classList.remove("modal-overlay--open");
-                  modalCart.classList.remove("modal-cart--open");
-                }
-              });
-
-            }
-          });
-        });
-      }
-    </script>
+    <script src="js/menu-toggle.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
