--- a/source/index.html
+++ b/source/index.html
@@ -249,6 +249,9 @@
               <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x">
               <img src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="Мы на карте">
             </picture>
+            <div class="contacts__map-container">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716461576!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1609143387016!5m2!1sru!2sru"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
           </div>
           <a class="contacts__button button" href="#">
             Напишите нам
@@ -300,7 +303,6 @@
         </div>
       </div>
     </footer>
-
     <section class="modal-overlay ">
       <div class="modal-cart ">
         <div class="modal-cart__inner">
@@ -326,62 +328,7 @@
         </div>
       </div>
     </section>
-
-    <script>
-      var navMain = document.querySelector(".main-nav");
-      var navToggle = document.querySelector(".main-nav__toggle");
-
-      navMain.classList.remove("main-nav--nojs");
-
-      navToggle.addEventListener("click", function() {
-        if (navMain.classList.contains("main-nav--closed")) {
-          navMain.classList.remove("main-nav--closed");
-          navMain.classList.add("main-nav--opened");
-        } else {
-          navMain.classList.add("main-nav--closed");
-          navMain.classList.remove("main-nav--opened");
-        }
-      });
-    </script>
-
-    <script>
-      if (document.querySelector(".modal-overlay")) {
-        var modalOverlay = document.querySelector(".modal-overlay"),
-        modalCart = modalOverlay.querySelector(".modal-cart"),
-        modalButtons = document.querySelectorAll(".js-modal-button");
-        modalButtonArray = Array.prototype.slice.call(modalButtons);
-        var modalField = modalCart.querySelector(".checkbox-cart__label");
-
-        modalButtonArray.forEach(function (el) {
-          el.addEventListener("click", function (e) {
-            e.preventDefault();
-            modalOverlay.classList.remove("visually-hidden");
-            modalOverlay.classList.add("modal-overlay--open");
-            modalCart.classList.add("modal-cart--open");
-            modalField.focus();
-            document.body.style.overflow = "hidden";
-
-
-            if (modalCart.classList.contains("modal-cart--open")) {
-              window.addEventListener("click", function (e) {
-                if (e.target === modalOverlay) {
-                  document.body.style.overflow = "visible";
-                  modalOverlay.classList.remove("modal-overlay--open");
-                  modalCart.classList.remove("modal-cart--open");
-                  }
-                });
-              window.addEventListener("keydown", function (evt) {
-                if (evt.keyCode === 27) {
-                  document.body.style.overflow = "visible";
-                  modalOverlay.classList.remove("modal-overlay--open");
-                  modalCart.classList.remove("modal-cart--open");
-                }
-              });
-
-            }
-          });
-        });
-      }
-    </script>
+    <script src="js/menu-toggle.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
