Позиция модального окна по центру, скрипт Слайдера с переполнением

--- a/source/index.html
+++ b/source/index.html
@@ -172,7 +172,7 @@
             Отзывы
           </h2>
           <div class="reviews__list slider__list">
-            <blockquote class="reviews__item slider__item">
+            <blockquote class="reviews__item slider__item slider__item--show">
               <p class="reviews__item reviews__item--text">
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
               </p>
@@ -183,15 +183,26 @@
                 @misssssiskras
               </a>
             </blockquote>
-            <blockquote class="reviews__item slider__item visually-hidden">
+            <blockquote class="reviews__item slider__item">
               <p class="reviews__item reviews__item--text">
-                Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+                Я сестра молодой мамы, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
               </p>
               <p class="reviews__item reviews__item--name">
                 Екатерина Красильникова
               </p>
               <a class="reviews__item reviews__item--link" href="#">
                 @misssssiskras2
+              </a>
+            </blockquote>
+            <blockquote class="reviews__item slider__item">
+              <p class="reviews__item reviews__item--text">
+                Я двоюродная сестра молодой мамы, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+              </p>
+              <p class="reviews__item reviews__item--name">
+                Елена Красильникова
+              </p>
+              <a class="reviews__item reviews__item--link" href="#">
+                @misssssiskras3
               </a>
             </blockquote>
           </div>
@@ -303,8 +314,8 @@
         </div>
       </div>
     </footer>
-    <section class="modal-overlay ">
-      <div class="modal-cart ">
+    <section class="modal-overlay">
+      <div class="modal-cart">
         <div class="modal-cart__inner">
           <h2 class="modal-cart__title">Добавить<br> в корзину</h2>
           <p class="modal-cart__text">Выберите размер:</p>
@@ -330,5 +341,6 @@
     </section>
     <script src="js/menu-toggle.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/slider.js"></script>
   </body>
 </html>
