--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,7 +17,7 @@
           </picture>
         </a>
       </div>
-      <nav class="main-nav main-nav--inner-page main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--inner-page main-nav--closed main-nav--n.min.js">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -178,7 +178,7 @@
         <div class="video__wrapper container">
           <div class="video__wrapper-inner">
             <h2 class="video__title">
-              Процесс<br> производства
+              Процесс<br>&nbsp;производства
             </h2>
             <div class="video__container">
               <picture>
@@ -191,9 +191,6 @@
               </picture>
               <button class="video__play-button">
                 <span class="visually-hidden">Смотреть видео</span>
-                <svg class="" width="101" height="77">
-                  <use xlink:href="img/svg/sprite.svg#play-button"></use>
-                </svg>
               </button>
             </div>
             <p class="video__text">
@@ -207,7 +204,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <div class="page-footer__logo-container">
-          <img class="page-footer__logo" src="../img/logo-footer.svg" width="102" height="34" alt="Логотип Интернет-магазин «Мишка»">
+          <img class="page-footer__logo" src="img/logo-footer.svg" width="102" height="34" alt="Логотип Интернет-магазин «Мишка»">
         </div>
         <div class="page-footer__social social">
           <b class="social__title visually-hidden">Давайте дружить!</b>
@@ -251,7 +248,7 @@
     <section class="modal-overlay ">
       <div class="modal-cart ">
         <div class="modal-cart__inner">
-          <h2 class="modal-cart__title">Добавить<br> в корзину</h2>
+          <h2 class="modal-cart__title">Добавить<br>&nbsp;в корзину</h2>
           <p class="modal-cart__text">Выберите размер:</p>
           <form action="https://echo.htmlacademy.ru" method="post" class="form-size">
             <ul class="form-size__inner">
