--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
           </picture>
         </a>
       </div>
-      <nav class="main-nav main-nav--inner-page main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--inner-page main-nav--closed main-nav--n.min.js">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -208,7 +208,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <div class="page-footer__logo-container">
-          <img class="page-footer__logo" src="../img/logo-footer.svg" width="102" height="34" alt="Логотип Интернет-магазин «Мишка»">
+          <img class="page-footer__logo" src="img/logo-footer.svg" width="102" height="34" alt="Логотип Интернет-магазин «Мишка»">
         </div>
         <div class="page-footer__social social">
           <b class="social__title visually-hidden">Давайте дружить!</b>
