--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
           </picture>
         </a>
       </div>
-      <nav class="main-nav main-nav--main-page main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--main-page main-nav--closed main-nav--n.min.js">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -72,7 +72,7 @@
       <h1 class="visually-hidden">Интернет-магазин «Мишка» — милые штуки ручной работы для дома</h1>
       <section class="slogan">
         <div class="slogan__wrapper container">
-          <h2 class="slogan__title">Милые штуки<br> ручной<br> работы для дома</h2>
+          <h2 class="slogan__title">Милые штуки<br>&nbsp;ручной<br>&nbsp;работы для дома</h2>
         </div>
       </section>
       <section class="sections-nav">
@@ -104,7 +104,7 @@
       </section>
       <section class="product">
         <div class="product__wrapper container">
-          <h2 class="product__name">Товар<br> недели</h2>
+          <h2 class="product__name">Товар<br>&nbsp;недели</h2>
           <h3 class="product__title heading-secondary">Вязаные корзинки</h3>
           <div class="product__container">
             <p class="product__text">
@@ -273,7 +273,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <div class="page-footer__logo-container">
-          <img class="page-footer__logo" src="../img/logo-footer.svg" width="102" height="34" alt="Логотип Интернет-магазин «Мишка»">
+          <img class="page-footer__logo" src="img/logo-footer.svg" width="102" height="34" alt="Логотип Интернет-магазин «Мишка»">
         </div>
         <div class="page-footer__social social">
           <b class="social__title visually-hidden">Давайте дружить!</b>
@@ -317,7 +317,7 @@
     <section class="modal-overlay">
       <div class="modal-cart">
         <div class="modal-cart__inner">
-          <h2 class="modal-cart__title">Добавить<br> в корзину</h2>
+          <h2 class="modal-cart__title">Добавить<br>&nbsp;в корзину</h2>
           <p class="modal-cart__text">Выберите размер:</p>
           <form action="https://echo.htmlacademy.ru" method="post" class="form-size">
             <ul class="form-size__inner">
