Исправлено Автоматизация созласно ДЗ

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header container-100">
@@ -270,7 +270,7 @@
         </div>
       </div>
     </section>
-    <script src="js/menu-toggle.js"></script>
-    <script src="js/modal.js"></script>
+    <script src="js/menu-toggle.min.js"></script>
+    <script src="js/modal.min.js"></script>
   </body>
 </html>
