--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header container-100">
@@ -249,6 +249,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/menu-toggle.js"></script>
+    <script src="js/menu-toggle.min.js"></script>
   </body>
 </html>
