--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
     <link href="css/style.min.css" rel="stylesheet">
+    <link rel="preload" href="fonts/opensans.woff2" as="font" crossorigin>
+    <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin>
+    <link rel="preload" href="js/script.min.js" as="script">
   </head>
   <body class="page__body">
     <header class="page-header container-100">
@@ -270,7 +273,6 @@
         </div>
       </div>
     </section>
-    <script src="js/menu-toggle.min.js"></script>
-    <script src="js/modal.min.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
