--- a/source/index.html
+++ b/source/index.html
@@ -57,7 +57,7 @@
         <ul class="main-nav__list special-list">
           <li class="special-list__item">
             <a href="#">
-              888Новые поступления
+              Новые поступления
             </a>
           </li>
           <li class="special-list__item">
