--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
     <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin>
     <link rel="preload" href="js/script.min.js" as="script">
   </head>
-  <body class="page__body">
+  <body class="page-body">
     <header class="page-header container-100">
       <div class="page-header__container">
         <a class="page-header__logo" href="index.html">
@@ -20,7 +20,7 @@
           </picture>
         </a>
       </div>
-      <nav class="main-nav main-nav--main-page main-nav--closed main-nav--nojs">
+      <nav class="main-nav main-nav--inner-page main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -181,7 +181,7 @@
         <div class="video__wrapper container">
           <div class="video__wrapper-inner">
             <h2 class="video__title">
-              Процесс<br>&nbsp;производства
+              Процесс<br>производства
             </h2>
             <div class="video__container">
               <picture>
