--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
     <link rel="preload" href="fonts/opensansbold.woff2" as="font" crossorigin>
     <link rel="preload" href="js/script.min.js" as="script">
   </head>
-  <body class="page__body">
+  <body class="page-body">
     <header class="page-header container-100">
       <div class="page-header__container">
         <a class="page-header__logo">
@@ -177,7 +177,7 @@
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item slider__item--show">
               <p class="reviews__item reviews__item--text">
-                Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у&nbsp;популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+                Я молодая мама, но всё равно фотографии не набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии сразу стали более стильными, а&nbsp;также набирают больше лайков!
               </p>
               <p class="reviews__item reviews__item--name">
                 Анастасия Красильникова
@@ -188,7 +188,7 @@
             </blockquote>
             <blockquote class="reviews__item slider__item">
               <p class="reviews__item reviews__item--text">
-                Я сестра молодой мамы, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+                Я сестра молодой мамы, но всё равно фотографии не набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии сразу стали более стильными, а&nbsp;также набирают больше лайков!
               </p>
               <p class="reviews__item reviews__item--name">
                 Екатерина Красильникова
@@ -199,7 +199,7 @@
             </blockquote>
             <blockquote class="reviews__item slider__item">
               <p class="reviews__item reviews__item--text">
-                Я двоюродная сестра молодой мамы, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+                Я двоюродная сестра молодой мамы, но всё равно фотографии не набирали и&nbsp;близко такого количества лайков, как у&nbsp;популярных инстамамочек. В&nbsp;отчаянии, я&nbsp;накупила аксессуаров и&nbsp;игрушек в&nbsp;Мишке, и&nbsp;мои фотографии сразу стали более стильными, а&nbsp;также набирают больше лайков!
               </p>
               <p class="reviews__item reviews__item--name">
                 Елена Красильникова
