Изменения согласно критериев

--- a/source/index.html
+++ b/source/index.html
@@ -139,7 +139,7 @@
           <p class="product__price">
             Цена: 990 руб.
           </p>
-          <a class="product__button button js-modal-button" href="#">Заказать</a>
+          <a class="product__button button js-modal-button" href="form.html">Заказать</a>
         </div>
       </section>
       <section class="advantages">
@@ -309,7 +309,7 @@
         </div>
         <div class="page-footer__copyright copyright">
           <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
             <svg width="27" height="35" xmlns="http://www.w3.org/2000/svg">
               <use xlink:href="img/svg/sprite.svg#htmlacademy"></use>
             </svg>
