--- a/source/catalog.html
+++ b/source/catalog.html
@@ -240,7 +240,7 @@
         </div>
         <div class="page-footer__copyright copyright">
           <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
             <svg width="27" height="35" xmlns="http://www.w3.org/2000/svg">
               <use xlink:href="img/svg/sprite.svg#htmlacademy"></use>
             </svg>
