--- a/source/index.html
+++ b/source/index.html
@@ -139,7 +139,7 @@
           <p class="product__price">
             Цена: 990 руб.
           </p>
-          <a class="product__button button js-modal-button" href="form.html">Заказать</a>
+          <a class="product__button button js-modal-button" href="cart.html">Заказать</a>
         </div>
       </section>
       <section class="advantages">
