--- a/source/catalog.html
+++ b/source/catalog.html
@@ -103,12 +103,12 @@
                 </div>
                 <div class="card__container-price">
                   <p class="card__price">1 200 руб.</p>
-                  <button class="card__button js-modal-button" type="button">
+                  <a class="card__button js-modal-button" href="cart.html">
                     <svg class="card__button-icon" width="21" height="18">
                       <use xlink:href="img/svg/sprite.svg#icon-cart"></use>
                     </svg>
                     <span class="visually-hidden">Добавить в корзину</span>
-                  </button>
+                  </a>
                 </div>
               </div>
             </li>
@@ -134,12 +134,12 @@
                 </div>
                 <div class="card__container-price">
                   <p class="card__price">690 руб.</p>
-                  <button class="card__button js-modal-button" type="button">
+                  <a class="card__button js-modal-button" href="cart.html">
                     <svg class="card__button-icon" width="21" height="18">
                       <use xlink:href="img/svg/sprite.svg#icon-cart"></use>
                     </svg>
                     <span class="visually-hidden">Добавить в корзину</span>
-                  </button>
+                  </a>
                 </div>
               </div>
             </li>
@@ -165,12 +165,12 @@
                 </div>
                 <div class="card__container-price">
                   <p class="card__price">1 500 руб.</p>
-                  <button class="card__button js-modal-button" type="button">
+                  <a class="card__button js-modal-button" href="cart.html">
                     <svg class="card__button-icon" width="21" height="18">
                       <use xlink:href="img/svg/sprite.svg#icon-cart"></use>
                     </svg>
                     <span class="visually-hidden">Добавить в корзину</span>
-                  </button>
+                  </a>
                 </div>
               </div>
             </li>
